--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,9 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <div class="home-centered">
+    <h2>Recent Activity</h2>
+    <button ion-button primary (click)="sendKudos()">Send</button>
+    <button ion-button primary (click)="requestKudos()">Request</button>
+  </div>
 </ion-content>
